[project]
name = "BroadcastLV"
version = "0.1.0"
description = ""
authors = [{ name = "ProgramRipper", email = "programripper@foxmail.com" }]
dependencies = [
    "brotli~=1.0",
    "msgspec~=0.11",
]
requires-python = ">=3.11"
license = { text = "MIT" }
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black~=22.12",
    "isort~=5.11",
]
